tests/baselines/reference/enumsWithMultipleDeclarations2.errors.txt
enumsWithMultipleDeclarations2.ts(10,3): error TS2432: In an enum with multiple declarations, only one declaration can omit an initializer for its first enum element.


==== enumsWithMultipleDeclarations2.ts (1 errors) ====
    enum E {
      A
    }
    
    enum E {
      B = 1
    }
    
    enum E {
      C
      ~
!!! error TS2432: In an enum with multiple declarations, only one declaration can omit an initializer for its first enum element.
    }